Disable Bahamut & update douyin

--- a/QuantumultX/Script.conf
+++ b/QuantumultX/Script.conf
@@ -1,4 +1,4 @@
-hostname = api.gamer.com.tw, duckduckgo.com, api1.dobenge.cn, vsco.co, pan.baidu.com, i.weread.qq.com, api.vuevideo.net, api.bjxkhc.com, newdrugs.dxy.cn, api.meiyan.com, api.vnision.com, viva.v21xy.com, api.picsart.c*, api.meiease.c*, ios.prod.ftl.netflix.com, *.amemv.com, api.bilibili.com, app.bilibili.com, api.live.bilibili.com
+hostname = duckduckgo.com, api1.dobenge.cn, vsco.co, pan.baidu.com, i.weread.qq.com, api.vuevideo.net, api.bjxkhc.com, newdrugs.dxy.cn, api.meiyan.com, api.vnision.com, viva.v21xy.com, api.picsart.c*, api.meiease.c*, ios.prod.ftl.netflix.com, *.amemv.com, api.bilibili.com, app.bilibili.com, api.live.bilibili.com
 
 #0-9
 # 91短视频
@@ -29,9 +29,9 @@ https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom\?access_key 
 # 百度云
 https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/BaiduCloud.js
 
-# Bahamut 动画疯 去广告
-https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/v3\/token\.php url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bahamut.js
-https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/v3\/token\.php url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bahamut.js
+# Bahamut 动画疯 去广告 api.gamer.com.tw
+# https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/v3\/token\.php url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bahamut.js
+# https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/v3\/token\.php url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bahamut.js
 
 
 # D
