--- a/QuantumultX/Cookie.conf
+++ b/QuantumultX/Cookie.conf
@@ -4,6 +4,9 @@ hostname = 110.43.90.61, zt.wps.cn, act.10010.com, m.client.10010.com, *.rrys202
 # 获取Cookie,获取后请禁用此并主机名删除，ifac*.iqiyi.com
 ^https?:\/\/iface(\d)?\.iqiyi\.com\/ url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js
 
+# 滴滴打车
+^https:\/\/as\.xiaojukeji\.com\/ep\/as\/toggles\? url script-request-header https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi.js
+
 # 京东签到
 # 获取京东Cookie. 
 # 注意此为本地路径, 请根据实际情况自行调整.
