--- a/QuantumultX/Script.conf
+++ b/QuantumultX/Script.conf
@@ -93,7 +93,7 @@ https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom\?access_key 
 
 # W
 # 微信读书
-^https?:\/\/i\.weread\.qq\.com\/pay\/memberCardSummary url script-response-body https://raw.githubusercontent.com/caorun728/Rule/master/Surge/Pro/Script/weixinyuedu.js
+^https?:\/\/i\.weread\.qq\.com\/pay\/memberCardSummary url script-response-body https://cdn.jsdelivr.net/gh/caorun728/Rule@master/Surge/Pro/Script/weixinyuedu.js
 
 # 微博应用内广告 (By yichahucha)
 ^https?://(sdk|wb)app.uve.weibo.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
