--- a/QuantumultX/Script.conf
+++ b/QuantumultX/Script.conf
@@ -1,4 +1,4 @@
-hostname = duckduckgo.com, api1.dobenge.cn, vsco.co, i.weread.qq.com, api.vuevideo.net, newdrugs.dxy.cn, api.meiyan.com, api.vnision.com, viva.v21xy.com, api.picsart.c*, api.meiease.c*, ios.prod.ftl.netflix.com, *.amemv.com, api.bilibili.com, app.bilibili.com, api.live.bilibili.com
+hostname = duckduckgo.com, api1.dobenge.cn, vsco.co, i.weread.qq.com, api.vuevideo.net, newdrugs.dxy.cn, api.meiyan.com, api.vnision.com, viva.v21xy.com, api.picsart.c*, api.meiease.c*, ios.prod.ftl.netflix.com, *.amemv.com, api.bilibili.com, app.bilibili.com, api.live.bilibili.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com
 
 #0-9
 # 91短视频
@@ -96,8 +96,8 @@ https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom\?access_key 
 ^https?:\/\/i\.weread\.qq\.com\/pay\/memberCardSummary url script-response-body https://cdn.jsdelivr.net/gh/caorun728/Rule@master/Surge/Pro/Script/weixinyuedu.js
 
 # 微博应用内广告 (By yichahucha)
-^https?://(sdk|wb)app.uve.weibo.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
-^https?://m?api.weibo.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/photos/pic_recommend_status|video/tiny_stream_video_list) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js
+^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
+^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/(photos/pic_recommend_status|live/media_homelist)|video/tiny_stream_video_list|photo/info) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js
 
 
 # Y
