update tiktok & module

--- a/QuantumultX/Rewrite/Unlock/TikTokUnlock.conf
+++ b/QuantumultX/Rewrite/Unlock/TikTokUnlock.conf
@@ -1,8 +1,7 @@
-hostname = *.tiktokv.com, *.byteoversea.com, *.musical.ly, *.snssdk.com
+# TikTok V18.2.1（1821000）
 
-^https://api[\w-]*?.tiktokv.com/aweme/v\d/policy/notice/? url reject
+hostname = *.tiktokv.com,*.byteoversea.com,*.tik-tokapi.com
 
-(?<=(carrier|account|sys)_region=)CN url 307 US
-(?<=(carrier|sys)_region=)CN url 307 US
-(?<=version_code=)\d{1,}.\d{1}\.\d{1} url 307 14.0.0
-(.*video_id=\w{32})(.*watermark=)(.*) url 302 $1
+(?<=_region=)CN(?=&) url 307 JP
+(?<=&mcc_mnc=)4 url 307 2
+^(https?:\/\/dm[\w-]+\.\w+\.com\/.+)(\?)(.+) url 302  $1$3
