--- a/QuantumultX/Rewrite/Unlock/TikTokKR.conf
+++ b/QuantumultX/Rewrite/Unlock/TikTokKR.conf
@@ -1,8 +1,7 @@
-hostname = *.tiktokv.com, *.byteoversea.com, *.musical.ly, *.snssdk.com
+# TikTok V18.2.1（1821000）
 
-^https://api[\w-]*?.tiktokv.com/aweme/v\d/policy/notice/? url reject
+hostname = *.tiktokv.com,*.byteoversea.com,*.tik-tokapi.com
 
-# TikTok By wzw1997007 & Choler
 (?<=_region=)CN(?=&) url 307 KR
-(?<=&app_version=)1[6-9]..(?=.?.?&) url 307 17..
-(?<=\?version_code=)1[6-9]..(?=.?.?&) url 307 17..
+(?<=&mcc_mnc=)4 url 307 2
+^(https?:\/\/dm[\w-]+\.\w+\.com\/.+)(\?)(.+) url 302  $1$3
