--- a/QuantumultX/Script.conf
+++ b/QuantumultX/Script.conf
@@ -1,20 +1,5 @@
 hostname = duckduckgo.com, api1.dobenge.cn, vsco.co, i.weread.qq.com, api.vuevideo.net, newdrugs.dxy.cn, api.meiyan.com, api.vnision.com, viva.v21xy.com, api.picsart.c*, api.meiease.c*, ios.prod.ftl.netflix.com, *.amemv.com, api.bilibili.com, app.bilibili.com, api.live.bilibili.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com
 
-#0-9
-# 91短视频
-# ^https?:\/\/.+\.(my10api|(.*91.*))\.(com|tips|app|xyz)(:\d{2,5})?\/api.php$ url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/91.js
-
-
-# A
-# 爱美剧Vip (by huihui）(官网：app.meiju2018.com)
-# hostname api.bjxkhc.com
-# ^https?:\/\/api.bjxkhc.com\/index\.php\/app\/ios\/(vod\/show|(user|vod|topic|type)\/index) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/aimeiju.js
-# 广告
-# ^https?://api.bjxkhc.com/index.php/app/ios/ads/index url reject-dict
-# ^https?://api.bjxkhc.com/index.php/app/ios/ver/index_ios$ url reject
-# ^https?://api.bjxkhc.com/index.php/app/ios/pay/ok$ url reject-dict
-
-
 # B
 # 哔哩哔哩动画去广告 (By onewayticket255)
 https://app.bilibili.com/x/v2/(splash|search/(defaultword|square)) url reject-200
@@ -34,7 +19,7 @@ https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom\?access_key 
 #^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/(feed|aweme\/post|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/ url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Aweme.js
 
 # 大片-视频编辑器 VIP
-^https?:\/\/api\.vnision\.com\/v1\/(users\/|banners) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/dapian.js
+# ^https?:\/\/api\.vnision\.com\/v1\/(users\/|banners) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/dapian.js
 
 
 # M
@@ -49,7 +34,7 @@ https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom\?access_key 
 
 # P
 #皮皮虾 去广告去水印
-^https?://.*\.snssdk\.com/bds/(feed/stream|comment/cell_reply|cell/cell_comment|cell/detail|ward/list|user/favorite|user/cell_coment|user/cell_userfeed|user/publish_list) url script-response-body https://raw.githubusercontent.com/Liquor030/Sub_Ruleset/master/Script/Super.js
+# ^https?://.*\.snssdk\.com/bds/(feed/stream|comment/cell_reply|cell/cell_comment|cell/detail|ward/list|user/favorite|user/cell_coment|user/cell_userfeed|user/publish_list) url script-response-body https://raw.githubusercontent.com/Liquor030/Sub_Ruleset/master/Script/Super.js
 
 #PicsArt app unlocks pro
 ^https:\/\/api\.(picsart|meiease)\.c(n|om)\/users\/show\/me\.json url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/PicsArt.js
@@ -88,12 +73,12 @@ https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom\?access_key 
 ^https:\/\/api\.vuevideo\.net\/api\/v1\/(users\/.+\/profile|subtitle\/prepare) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/VUE.js
 
 # 小影 解锁Vip (By @hiepkimcdtk55)
-^https:\/\/viva\.v21xy\.com\/api\/rest\/u\/vip url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/vivavideo.js
+# ^https:\/\/viva\.v21xy\.com\/api\/rest\/u\/vip url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/vivavideo.js
 
 
 # W
 # 微信读书
-^https?:\/\/i\.weread\.qq\.com\/pay\/memberCardSummary url script-response-body https://cdn.jsdelivr.net/gh/caorun728/Rule@master/Surge/Pro/Script/weixinyuedu.js
+^https?:\/\/i\.weread\.qq\.com\/pay\/memberCardSummary url script-response-body https://cdn.jsdelivr.net/gh/caorun728/Rule@master/Surge/Pro/Script/weread.js
 
 # 微博应用内广告 (By yichahucha)
 ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
@@ -102,7 +87,7 @@ https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom\?access_key 
 
 # Y
 # 用药助手解锁专业版 (By Primovist)
-^https?:\/\/(i|newdrugs)\.dxy\.cn\/(snsapi\/username\/|app\/user\/(pro\/stat\?|init\?timestamp=)) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/yyzs.js
+# ^https?:\/\/(i|newdrugs)\.dxy\.cn\/(snsapi\/username\/|app\/user\/(pro\/stat\?|init\?timestamp=)) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/yyzs.js
 
 
 # Z
