--- a/QuantumultX/Cookie.conf
+++ b/QuantumultX/Cookie.conf
@@ -1,4 +1,4 @@
-hostname = 110.43.90.61, zt.wps.cn, act.10010.com, m.client.10010.com, *.rrys2020.com, ios.zmzapi.com, ifac*.iqiyi.com
+hostname = 110.43.90.61, zt.wps.cn, act.10010.com, m.client.10010.com, *.rrys2020.com, ios.zmzapi.com, ifac*.iqiyi.com, as.xiaojukeji.com, common.diditaxi.com.cn
 
 # 爱奇艺脚本
 # 获取Cookie,获取后请禁用此并主机名删除，ifac*.iqiyi.com
