--- a/QuantumultX/Cookie.conf
+++ b/QuantumultX/Cookie.conf
@@ -1,14 +1,9 @@
-hostname = 110.43.90.61, zt.wps.cn, act.10010.com, m.client.10010.com, *.rrys2020.com, ios.zmzapi.com, ifac*.iqiyi.com, as.xiaojukeji.com, common.diditaxi.com.cn
+hostname = 110.43.90.61, zt.wps.cn, act.10010.com, m.client.10010.com, ifac*.iqiyi.com
 
 # 爱奇艺脚本
 # 获取Cookie,获取后请禁用此并主机名删除，ifac*.iqiyi.com
 ^https?:\/\/iface(\d)?\.iqiyi\.com\/ url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js
 
-# 滴滴打车
-# APP
-^https:\/\/as\.xiaojukeji\.com\/ep\/as\/toggles\? url script-request-header https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi_new.js
-# WeChat-MiniApp
-^https:\/\/common\.diditaxi\.com\.cn\/webapp\/config\/sidebar\? url script-request-header https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi_new.js
 
 # 京东签到
 # 获取京东Cookie. 
@@ -22,7 +17,3 @@ https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-reques
 ^https?:\/\/act.10010.com\/SigninApp\/signin\/querySigninActivity.htm url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.cookie.js
 ^https?:\/\/act.10010.com\/SigninApp(.*?)\/signin\/daySign url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.cookie.js
 ^https?:\/\/m.client.10010.com\/dailylottery\/static\/(textdl\/userLogin|active\/findActivityInfo) url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.cookie.js
-
-# 字幕组签到
-^https?:\/\/(www\.)?rrys2020\.com\/?.? url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/zimuzu/zimuzu.cookie.js
-^http:\/\/ios.zmzapi.com\/index.php.*a=(mobile_)?login url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/zimuzu/zimuzu.cookie.js
