--- a/QuantumultX/Cookie.conf
+++ b/QuantumultX/Cookie.conf
@@ -1,4 +1,4 @@
-hostname = 110.43.90.61, zt.wps.cn, act.10010.com, m.client.10010.com, ifac*.iqiyi.com
+hostname = 110.43.90.61, zt.wps.cn, act.10010.com, m.client.10010.com, ifac*.iqiyi.com, ms.jr.jd.com, me-api.jd.com, api.m.jd.com
 
 # 爱奇艺脚本
 # 获取Cookie,获取后请禁用此并主机名删除，ifac*.iqiyi.com
@@ -8,7 +8,11 @@ hostname = 110.43.90.61, zt.wps.cn, act.10010.com, m.client.10010.com, ifac*.iqi
 # 京东签到
 # 获取京东Cookie. 
 # 注意此为本地路径, 请根据实际情况自行调整.
-https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
+# 获取京东Cookie. 
+^https:\/\/(api\.m|me-api)\.jd\.com\/(client\.action\?functionId=signBean|user_new\/info\/GetJDUserInfoUnion\?) url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
+
+# 获取钢镚签到body. 
+^https:\/\/ms\.jr\.jd\.com\/gw\/generic\/hy\/h5\/m\/appSign\? url script-request-body https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
 
 # WPS打卡
 ^https:\/\/zt.wps.cn\/2018\/docer_check_in\/api\/act_list url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/wps/wps.cookie.js
