Add kuwomusic crack

--- a/QuantumultX/QX_Script.conf
+++ b/QuantumultX/QX_Script.conf
@@ -1,4 +1,4 @@
-hostname = duckduckgo.com, api1.dobenge.cn, vsco.co, api.revenuecat.com, i.weread.qq.com, api.vuevideo.net, newdrugs.dxy.cn, api.meiyan.com, api.vnision.com, viva.v21xy.com, api.picsart.c*, api.meiease.c*, api.bilibili.com, app.bilibili.com, api.live.bilibili.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, snailsleep.net
+hostname = duckduckgo.com, api1.dobenge.cn, vsco.co, api.revenuecat.com, i.weread.qq.com, api.vuevideo.net, newdrugs.dxy.cn, api.meiyan.com, api.vnision.com, viva.v21xy.com, api.picsart.c*, api.meiease.c*, api.bilibili.com, app.bilibili.com, api.live.bilibili.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, snailsleep.net, vip1.kuwo.cn
 
 # B
 # 哔哩哔哩动画去广告 (By onewayticket255)
@@ -20,6 +20,12 @@ https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom\?access_key 
 
 # 大片-视频编辑器 VIP
 # ^https?:\/\/api\.vnision\.com\/v1\/(users\/|banners) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/dapian.js
+
+
+# K
+# 酷我音乐
+# hostname vip1.kuwo.cn
+^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Kuwo.js
 
 
 # M
