--- a/Loon/Script/Script.conf
+++ b/Loon/Script/Script.conf
@@ -32,7 +32,7 @@ http-response ^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice)
 
 # > CamScanner
 # hostname = ap*.intsig.net
-// http-response https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/CamScanner.js
+http-response https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/CamScanner.js
 
 
-hostname = api.bilibili.com, vsco.co, api.revenuecat.com, api.vuevideo.net, api.picsart.c*, api.meiease.c*, api1.dobenge.cn, api.meiyan.com, vip1.kuwo.cn
+hostname = api.bilibili.com, vsco.co, api.revenuecat.com, api.vuevideo.net, api.picsart.c*, api.meiease.c*, api1.dobenge.cn, api.meiyan.com, vip1.kuwo.cn, ap*.intsig.net
