--- a/QuantumultX/QX_Script.conf
+++ b/QuantumultX/QX_Script.conf
@@ -1,4 +1,4 @@
-hostname = duckduckgo.com, api1.dobenge.cn, vsco.co, api.revenuecat.com, i.weread.qq.com, api.vuevideo.net, newdrugs.dxy.cn, api.meiyan.com, api.vnision.com, viva.v21xy.com, api.picsart.c*, api.meiease.c*, api.bilibili.com, app.bilibili.com, api.live.bilibili.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, snailsleep.net, vip1.kuwo.cn
+hostname = duckduckgo.com, vsco.co, api.revenuecat.com, i.weread.qq.com, api.vuevideo.net, newdrugs.dxy.cn, api.vnision.com, api.picsart.c*, api.meiease.c*, snailsleep.net, vip1.kuwo.cn, api.account.meitu.com, api.meiyan.com, api.xiuxiu.meitu.com, h5.xiuxiu.meitu.com, api.lightricks.com, cn.pornhubpremium.com
 
 
 
@@ -9,8 +9,12 @@ hostname = duckduckgo.com, api1.dobenge.cn, vsco.co, api.revenuecat.com, i.werea
 
 
 # M
-#美颜相机一次性解锁内购（by黑黑酱）
-^https:\/\/api\.meiyan\.com\/iap\/verify\.json url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/myxj.js
+#美颜相机
+^https?:\/\/api\.account\.meitu\.com\/(common\/check_device_login_pwd|users\/show_current\.json) url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/MeiYanXiangJi.js
+^https?:\/\/api\.meiyan\.com\/vip\/(user_center\.json|user_info\.json) url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/MeiYanXiangJi.js
+
+# > 美图秀秀(2022.01.17)
+^https?:\/\/(h5|api)\.xiuxiu\.meitu\.com\/v\d\/(h\d\/vip|vip|user)\/ url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/MeiTuXiuXiu.js
 
 
 # P
@@ -19,6 +23,10 @@ hostname = duckduckgo.com, api1.dobenge.cn, vsco.co, api.revenuecat.com, i.werea
 
 #PicsArt app unlocks pro
 ^https:\/\/api\.(picsart|meiease)\.c(n|om)\/users\/show\/me\.json url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/PicsArt.js
+
+# > PornHub Unlock Premium By Hausd0rff
+# cn.pornhubpremium.com
+^https?:\/\/cn\.pornhubpremium\.com\/ url script-request-header https://raw.githubusercontent.com/yqc007/QuantumultX/master/PornHubPremiumCrack.js
 
 
 # Q
@@ -55,17 +63,16 @@ hostname = duckduckgo.com, api1.dobenge.cn, vsco.co, api.revenuecat.com, i.werea
 # VUE pro
 ^https:\/\/api\.vuevideo\.net\/api\/v1\/(users\/.+\/profile|subtitle\/prepare) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/VUE.js
 
-# 小影 解锁Vip (By @hiepkimcdtk55)
-# ^https:\/\/viva\.v21xy\.com\/api\/rest\/u\/vip url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/vivavideo.js
+# videoleap
+#api.lightricks.com
+^https:\/\/api\.lightricks\.com\/subscription url script-response-body buehen0426/Scripts/videoleap/videoleap.js
+
 
 
 # W
 # 微信读书
 ^https?:\/\/i\.weread\.qq\.com\/pay\/memberCardSummary url script-response-body https://cdn.jsdelivr.net/gh/caorun728/Rule@master/Surge/Pro/Script/weread.js
 
-# 微博应用内广告 (By yichahucha)
-^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
-^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/(photos/pic_recommend_status|live/media_homelist)|video/tiny_stream_video_list|photo/info|remind/unread_count) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js
 
 #蜗牛睡眠会员（by黑黑酱）MITM:snailsleep.net
 ^https:\/\/snailsleep\.net\/snail\/v1\/profile\/get url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/wnsm.js
@@ -74,16 +81,3 @@ hostname = duckduckgo.com, api1.dobenge.cn, vsco.co, api.revenuecat.com, i.werea
 # Y
 # 用药助手解锁专业版 (By Primovist)
 # ^https?:\/\/(i|newdrugs)\.dxy\.cn\/(snsapi\/username\/|app\/user\/(pro\/stat\?|init\?timestamp=)) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/yyzs.js
-
-
-# Z
-#联通营业厅 去轮播广告 (By Wangsc1)
-^https?://m.client.10010.com/uniAdmsInterface/getHomePageAd url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/china_unicom.js
-
-# 知乎去广告 (By onewayticket255)
-https://api.zhihu.com/(ad|drama|fringe|commercial|market/popover|search/(top|preset|tab)|.*featured-comment-ad) url reject-200
-https://api.zhihu.com/people/ url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20people.js
-https://api.zhihu.com/moments/recommend url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20feed.js
-https://api.zhihu.com/topstory/recommend url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20recommend.js
-https://api.zhihu.com/v4/questions url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20answer.js
-https?://link.zhihu.com/\?target= url script-request-header https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20link.js
