--- a/QuantumultX/QX_Script.conf
+++ b/QuantumultX/QX_Script.conf
@@ -1,4 +1,4 @@
-hostname = duckduckgo.com, vsco.co, api.revenuecat.com, i.weread.qq.com, api.vuevideo.net, newdrugs.dxy.cn, api.vnision.com, api.picsart.c*, api.meiease.c*, snailsleep.net, vip1.kuwo.cn, api.account.meitu.com, api.meiyan.com, api.xiuxiu.meitu.com, h5.xiuxiu.meitu.com, api.lightricks.com, cn.pornhubpremium.com
+hostname = duckduckgo.com, vsco.co, api.revenuecat.com, i.weread.qq.com, api.vuevideo.net, newdrugs.dxy.cn, api.vnision.com, api.picsart.c*, api.meiease.c*, snailsleep.net, vip1.kuwo.cn, api.account.meitu.com, api.meiyan.com, api.xiuxiu.meitu.com, h5.xiuxiu.meitu.com, cn.pornhubpremium.com, api.lightricks.com, nomo.dafork.com
 
 
 
@@ -60,13 +60,16 @@ hostname = duckduckgo.com, vsco.co, api.revenuecat.com, i.weread.qq.com, api.vue
 # VSCO滤镜VIP
 ^https:\/\/(api\.revenuecat\.com\/v\d\/subscribers|vsco\.co\/api\/subscriptions\/\d\.\d\/user-subscriptions)\/ url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/vsco.js
 
+# Videoleap
+#hostname = api.lightricks.com
+^https:\/\/api\.lightricks\.com\/subscription url script-response-body https://github.com/buehen/QuantumultX/raw/main/scripts/videoleap/videoleap.js
+
+# > NOMO CAM 解锁订阅
+#hostname = nomo.dafork.com
+^https?:\/\/nomo\.dafork\.com\/api\/v3\/register\/phone_signin$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/NoMoCamProCrack.js
+
 # VUE pro
 ^https:\/\/api\.vuevideo\.net\/api\/v1\/(users\/.+\/profile|subtitle\/prepare) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/VUE.js
-
-# videoleap
-#api.lightricks.com
-^https:\/\/api\.lightricks\.com\/subscription url script-response-body buehen0426/Scripts/videoleap/videoleap.js
-
 
 
 # W
